# protol-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: another_test.py  basic_usage.py  check_reputation.py  crewai_example.py  langchain_example.py  report_incident.py  test_play.py  test_real_backend.py
src/agent_os/: __init__.py  _http.py  _local_store.py  _utils.py  action.py  agent.py  client.py  constants.py  exceptions.py  models.py
src/agent_os/integrations/: __init__.py  crewai.py  langchain.py
src/protol/: __init__.py  _http.py  _local_store.py  _utils.py  action.py  agent.py  client.py  constants.py  exceptions.py  models.py
src/protol/integrations/: __init__.py  crewai.py  langchain.py
tests/: conftest.py  test_action.py  test_agent.py  test_client.py  test_http.py  test_local_store.py  test_models.py  test_utils.py
tests/test_integrations/: test_crewai.py  test_langchain.py
