[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protol-py"
version = "0.1.0"
description = "The civilization layer for AI agents — identity, action tracking, and reputation scoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Protol", email = "hello@protol.dev" },
]
keywords = ["ai", "agents", "reputation", "trust", "identity", "llm", "langchain", "protol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]
all = ["langchain-core>=0.1.0", "crewai>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://protol.dev"
Documentation = "https://docs.protol.dev"
Repository = "https://github.com/protol-dev/protol-py"
Issues = "https://github.com/protol-dev/protol-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/protol"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true
